workflow/public_html/skins/green/style.css
body
{
	margin		:0px;
	background-color:#ECECEC;
	color		:#808080;
	font		:normal 8pt sans-serif,Tahoma,MiscFixed;
}

a, img {
    padding: 0;
    margin: 0;
}

img { 
    border: 0 none;
}

.Footer
{
	font		:normal 8pt sans-serif,Tahoma,MiscFixed;
	color		:#000;
	height		:150px;
	text-align	:center;
}
.Footer .image
{
	/*background-image: url(/skins/green/images/bf.jpg);
	background-repeat: repeat-x;
	height:10px;*/

}
.Footer .content
{
	color		:black;
	padding		:10px;
}
.Footer .content a
{
	color		:#006699;
	text-decoration	:none;
}
.Footer .content a:hover
{
	color		:orange;
}
.logout a
{
	font:bold 8pt Tahoma,sans-serif,MiscFixed;
	color:#006699;
	text-decoration:none;
}
.logout a:hover
{
	color:orange;
}
.temporalMessageERROR
{
	-moz-border-radius:6px;	/* Rounded edges in Firefox */
	background-image: url(/skins/green/images/error.gif);
	color	:#ffffff;
	border-style:solid;
	border-width:1px;
	border-color:#ffffff;
	font	:normal 8pt Tahoma,sans-serif,MiscFixed;
	text-decoration:none;
	height:25px;
	padding:0 20px;
    vertical-align:middle;
    font-weight: bold;
}
.temporalMessageWARNING
{
	-moz-border-radius:6px;	/* Rounded edges in Firefox */
	background-image: url(/skins/green/images/warning.png);
	color	:#555555;
	border-style:solid;
	border-width:1px;
	border-color:#ffffff;
	font	:normal 8pt Tahoma,sans-serif,MiscFixed;
	text-decoration:none;
	height:25px;
	padding:0 20px;
    vertical-align:middle;
    font-weight: bold;
}
.temporalMessageINFO
{
	-moz-border-radius:6px;	/* Rounded edges in Firefox */
	background-image: url(/skins/green/images/message.png);
	color	:#000000;
	border-style:solid;
	border-width:1px;
	border-color:#ffffff;
	font	:normal 8pt Tahoma,sans-serif,MiscFixed;
	text-decoration:none;
	height:25px;
	padding:0 20px;
    vertical-align:middle;
    font-weight: bold;
}

.userGroupTitle
{
	color	:black;
	font	:bold 8pt Tahoma,sans-serif,MiscFixed;
	padding-left:10px;
}
.userGroupLink
{
	padding:0px;
	padding-left:10px;
	padding-bottom:10px;
}
.userGroupLink a
{
	color	:#006699;
	text-decoration:none;
	font	:bold 8pt Tahoma,sans-serif,MiscFixed;
}
.userGroupLink a:hover
{
	color	:orange;
}
span.treePlusLink
{
	background-color:#E68B2C;
	color:white;
	font:normal 7pt Tahoma,MiscFixed;
	text-decoration:none;
	padding-left:1px;
	padding-right:1px;
	overflow:hidden;
	cursor:pointer;
}
span.treePlusLink:hover
{
	:#EFC395;
}
span.XtreeMinus
{
	background-color:#006699;
	color:white;
	font:normal 7pt Tahoma,MiscFixed;
	text-decoration:none;
	padding-left:1px;
	padding-right:1px;
	overflow:hidden;
	cursor:pointer;
}
span.XtreeMinus:hover
{
	background-color:#EFC395;
}

/* leimnud.app.menuRight CSS begin */

/* Processmaker CSS  begin */
.pm_separator___processmaker
{

}
.pm_separatorOn___processmaker
{

}
.pm_separatorOff___processmaker,.pm_separatorOn___processmaker
{
	height: 7px;
	cursor:pointer;
	text-align:center;
	overflow:hidden;
}
.pm_separatorDOff___processmaker,.pm_separatorDOn___processmaker, .pm_separatorOver___processmaker, .pm_separatorOut___processmaker
{
	height:7px;
	width:100%;
	background-color:#C1D2EE;
	background-color:buttonface;
	border-color:buttonhighlight buttonshadow buttonshadow buttonhighlight;
	border-style:solid;
	border-width:1px 0pt;
	overflow:hidden;
}
.pm_separatorDOff___processmaker
{
	background:url(/js/maborak/core/images/separator.up.gif);
	background-repeat:no-repeat;
	background-position:50% 2;

}
.pm_separatorDOn___processmaker
{
	background:url(/js/maborak/core/images/separator.down.gif);
	background-repeat:no-repeat;
	background-position:50% 50%;
}
.pm_separatorOver___processmaker
{
	background-color:#C1D2EE;
}
.pm_separatorOut___processmaker
{
	background-color:buttonface;
}

/* Processmaker CSS  end */
/* processmap Theme.Task begin */
/*theme firefox begin*/
.processmap_task___firefox
{
	position	: absolute;
	height		: 30px;
	width		: 150px;
	background-color: #006699;
	border		: 1px solid #006699;
	z-index		: 10;
	overflow	: hidden;
	cursor		: move;
}
.processmap_task_label___firefox
{
	color:white;
	text-align:center;
	cursor:text;
	padding-top:11;
}
.processmap_text___firefox
{
	position	: absolute;
	cursor		: move;
	background-color:red;
}
.processmap_title___firefox
{

}
	/*theme firefox end*/

	/*theme processmap begin*/
.processmap_task___processmaker
{
	position	: absolute;
	height		: 40px;
	height		: 38px;
	width		: 171px;
	width		: 164px;
	z-index		: 10;
	overflow	: hidden;
	cursor		: move;
	/*background	: url(/js/processmap/core/images/bg_task.gif);
	background	: url(/images/fondotask.png);*/
	//background-color:#006699;
	//background-color:#6F6F6F;
	background	: url(/images/borderTask.gif);
	background-color:#0576C4;
	background-color:#006699;
	vertical-align:middle;
	display:table-cell;
}
.processmap_task_label___processmaker
{
	color:#FFF;
	text-align:center;
	/*position:absolute;*/
	margin:10;
	vertical-align:middle;
	cursor:move;
}
.processmap_text___processmaker
{
	position	: absolute;
	z-index		: 10;
	cursor		: move;
	font		: bold 8pt Tahoma,MiscFixed;
}
.processmap_title___processmaker
{
	position	:absolute;
	cursor		:move;
	font		:bold 13pt Tahoma,MiscFixed;
}
	/*theme processmap end*/

.pm__toolbar{
    align:left;
    font-size:1;
    line-height:31px;
}

.processmap_toolbarItem___processmaker
{
	margin:0px;
	border:1px solid #CEC6B5;
	background:#EFEFEF url(/images/dynamicForm/toolbar.buttonbg.gif) repeat-x scroll 0%;
}
.processmap_toolbarItem___processmaker:hover
{
	margin:0px;
	background-color:buttonface;
	border-color:buttonhighlight buttonshadow buttonshadow buttonhighlight;
	border-style:solid;
	/*border-width:1px 0pt;*/
	border:1px solid #316AC5;
	background:#C1D2EE;
	background-color: #C1D2EE;


}
/* ... */

